Alteração HTML/PHP

--- a/add.html
+++ b/add.html
@@ -30,6 +30,6 @@
             <input type="submit" value="Cadastrar"/>
         </form>
     </div>
-    <a style="text-align: center;" href="index.html">Voltar</a>
+    <a style="text-align: center;" href="index.php">Voltar</a>
 </body>
 </html>
